camera addittion (need a new model)

--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -15,12 +15,31 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <TextView
-            android:id="@+id/textViewCentered"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Scanner Activity"
-            android:layout_centerInParent="true" />
+        <TextureView
+            android:id="@+id/textureView"
+            android:layout_width="400dp"
+            android:layout_height="600dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="38dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="39dp"
+            android:layout_marginBottom="178dp" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="400dp"
+            android:layout_height="600dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="38dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="39dp"
+            android:layout_marginBottom="178dp"/>
 
     </RelativeLayout>
 
