--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,26 +37,26 @@
             android:id="@+id/btn_order"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="30dp"
             android:text="Booking"
-            android:textSize="20sp"
-            android:padding="30dp"/>
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/btn_record"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Records"
-            android:textSize="20sp"
-            android:padding="30dp"
             android:layout_below="@+id/btn_order"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="40dp"
+            android:padding="30dp"
+            android:text="Records"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/btn_statistics"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_record"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="40dp"
             android:padding="30dp"
             android:text="Statistics"
             android:textSize="20sp" />
