--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/order_activity"
+    android:id="@+id/record"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/viamm_bg"
@@ -21,30 +21,21 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:title="Records" />
 
-        <TextView
-            android:id="@+id/tvFilter"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Filter"
-            android:textSize="30sp"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvOrders"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/tvFilter"
-            app:layout_constraintBottom_toTopOf="@id/btnOrderBack"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintBottom_toTopOf="@id/btnBack"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:listitem="@layout/item_order" />
 
         <Button
-            android:id="@+id/btnOrderBack"
+            android:id="@+id/btnBack"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="Back"
             app:layout_constraintTop_toBottomOf="@id/rvOrders"
             app:layout_constraintBottom_toBottomOf="parent"
