--- a/app/src/main/res/layout-land/activity_edit_order.xml
+++ b/app/src/main/res/layout-land/activity_edit_order.xml
@@ -39,6 +39,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:text="Booking Number:"
+            android:textStyle="bold"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +62,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Status:"
+            android:text="Booking Status:"
+            android:textStyle="bold"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -138,6 +140,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:text="Total Amount:"
+            android:textStyle="bold"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
