--- a/app/src/main/res/layout-land/activity_order.xml
+++ b/app/src/main/res/layout-land/activity_order.xml
@@ -21,25 +21,29 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:title="Ongoing Booking" />
 
-    <TextView
-        android:id="@+id/tvFilter"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Filter"
-        android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvOrders"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tvFilter"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toTopOf="@id/btnBack"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_order" />
+
+    <!--If there are no available ongoing booking-->
+    <TextView
+        android:id="@+id/tvNoOngoingBooking"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No new booking added yet."
+        android:visibility="gone"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toTopOf="@id/btnBack"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
         android:id="@+id/btnBack"
