--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -21,6 +21,20 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:title="Records" />
 
+    <!--If there are no available ongoing booking-->
+    <TextView
+        android:id="@+id/tvNoRecordBooking"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No new record added yet."
+        android:visibility="gone"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toTopOf="@id/btnBack"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvOrders"
         android:layout_width="0dp"
