--- a/app/src/main/res/layout/processing_loading.xml
+++ b/app/src/main/res/layout/processing_loading.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fetching Data..."
+        android:text="Processing..."
         android:textColor="@android:color/white"
         android:textSize="16sp"
         android:layout_marginTop="8dp"
