--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -17,29 +17,36 @@
 
         <TextureView
             android:id="@+id/textureView"
-            android:layout_width="400dp"
-            android:layout_height="600dp"
+            android:layout_width="411dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="14dp"
-            android:layout_marginEnd="39dp"
-            android:layout_marginBottom="178dp" />
+            android:layout_marginStart="-1dp"
+            android:layout_marginTop="-1dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="193dp" />
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="400dp"
-            android:layout_height="600dp"
+            android:layout_width="411dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="14dp"
-            android:layout_marginEnd="39dp"
-            android:layout_marginBottom="178dp" />
+            android:layout_marginStart="-1dp"
+            android:layout_marginTop="-1dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="193dp" />
+
+        <TextView
+            android:id="@+id/counterView"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="29dp" />
 
     </RelativeLayout>
 
