--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -61,12 +61,38 @@
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/tvOrderID" />
 
+        <TextView
+            android:id="@+id/tvOrderMasseur"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="8dp"
+            android:text="Masseur: "
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderStatus" />
+
+        <TextView
+            android:id="@+id/tvOrderDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="8dp"
+            android:text="Booking Date & Time: "
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderMasseur" />
+
         <ScrollView
             android:id="@+id/sv_tbl"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tvOrderStatus"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderDate"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tvTotalCost">
@@ -172,7 +198,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:backgroundTint="@color/red"
-            android:text="Cancel Order"
+            android:text="Cancel Booking"
             android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@id/btnOrderPayment"
             app:layout_constraintStart_toStartOf="parent"
