--- a/app/src/main/res/layout/activity_edit_record.xml
+++ b/app/src/main/res/layout/activity_edit_record.xml
@@ -44,11 +44,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvRecordID" />
 
+    <TextView
+        android:id="@+id/tvRecordMasseur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="8dp"
+        android:text="Masseur:"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvRecordStatus" />
+
+    <TextView
+        android:id="@+id/tvRecordDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="8dp"
+        android:text="Booking Date & Time:"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvRecordMasseur" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/innerLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tvRecordStatus"
+        app:layout_constraintTop_toBottomOf="@id/tvRecordDate"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <ScrollView
@@ -56,7 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="237dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/textCost"
+            app:layout_constraintBottom_toTopOf="@+id/tvTotalCost"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="16dp"
