--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,7 +91,8 @@
             android:layout_below="@+id/field_password"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
-            android:backgroundTint="@color/APpColor"
+            android:backgroundTint="@color/green"
+            android:textSize="30dp"
             android:shadowRadius="@integer/material_motion_duration_long_1"
             android:text="LOG IN"
             android:textStyle="bold" />
