--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<!-- predefined color -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF4B4B</color>
-    <color name="green">#00DC00</color>
+    <color name="green">#96FF96</color>
     <color name="bluegreen">#78F6F6</color>
     <color name="lavender">#8080DC</color>
     <color name="grey">#A6A6A6</color>
 
-<!--Toolbar colors-->
+<!-- Toolbar colors -->
     <color name="toolbarColor">#7f421f</color>
     <color name="APpColor">#7f421f</color>
     <color name="StatusBarColor">#dccdb8</color>
 
-<!--Status Colors-->
+<!-- Status Colors -->
     <color name="Status_Cancelled">#F21F1F</color>
     <color name="Status_Complete">#1EF01E</color>
     <color name="Status_Ongoing">#FF8C00</color>
 
-<!--Custom Alert Dialong Colors-->
+<!-- Custom Alert Dialong Colors -->
     <color name="AlertDialogBG">#D2B48C</color>
     <color name="AlertDialogText">#FFFFFFFF</color>
+
+<!-- Menu Button Colors -->
+    <color name="Bookings">#69BFFF</color>
+    <color name="Records">#80CBC4</color>
+    <color name="Analytics">#B39DDB</color>
 
 </resources>
