--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,8 +37,10 @@
             android:layout_height="150dp"
             android:padding="30dp"
             android:text="Booking"
-            android:textSize="30sp"
-            android:background="@color/Bookings"/>
+            android:textSize="50sp"
+            android:background="@color/Bookings"
+            android:layout_margin="20sp"
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/btn_record"
@@ -48,8 +50,10 @@
             android:layout_marginTop="40dp"
             android:padding="30dp"
             android:text="Records"
-            android:textSize="30sp"
-            android:background="@color/Records"/>
+            android:textSize="50sp"
+            android:background="@color/Records"
+            android:layout_margin="20sp"
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/btn_statistics"
@@ -59,8 +63,10 @@
             android:layout_marginTop="40dp"
             android:padding="30dp"
             android:text="Analytics"
-            android:textSize="30sp"
-            android:background="@color/Analytics"/>
+            android:textSize="50sp"
+            android:background="@color/Analytics"
+            android:layout_margin="20sp"
+            android:textStyle="bold"/>
 
     </RelativeLayout>
 
