--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,49 +24,61 @@
         app:contentInsetEnd="0dp"
         tools:layout_editor_absoluteX="1dp" />
 
+    <TextView
+        android:id="@+id/tvWelcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Welcome to Viamm,"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:layout_editor_absoluteX="16dp" />
+
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_height="610dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
+        tools:layout_editor_absoluteX="-2dp">
 
         <Button
             android:id="@+id/btn_order"
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_margin="20sp"
+            android:background="@color/Bookings"
             android:padding="30dp"
             android:text="Booking"
             android:textSize="50sp"
-            android:background="@color/Bookings"
-            android:layout_margin="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btn_record"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_below="@+id/btn_order"
+            android:layout_margin="20sp"
             android:layout_marginTop="40dp"
+            android:background="@color/Records"
             android:padding="30dp"
             android:text="Records"
             android:textSize="50sp"
-            android:background="@color/Records"
-            android:layout_margin="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btn_statistics"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_below="@+id/btn_record"
+            android:layout_margin="20sp"
             android:layout_marginTop="40dp"
+            android:background="@color/Analytics"
             android:padding="30dp"
             android:text="Analytics"
             android:textSize="50sp"
-            android:background="@color/Analytics"
-            android:layout_margin="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
