added some features in booking and records, and others -added a single and double click for list views, if single click it just TTS the info, if double click it redirects the user the the said activity. -change the toolbar(header) and button colors -added session username -added more better logout -added a welcome user in dashboard -removed menu item in all activity except for main

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="grey">#A6A6A6</color>
 
 <!-- Toolbar colors -->
-    <color name="toolbarColor">#7f421f</color>
+    <color name="toolbarColor">#7699d5</color>
     <color name="APpColor">#7f421f</color>
     <color name="StatusBarColor">#dccdb8</color>
 
