--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -19,7 +19,7 @@
 
             <item
                 android:id="@+id/btn_logout"
-                android:title="Logout"
+                android:title="LogOut"
                 android:icon="@drawable/baseline_logout_24"
                 app:showAsAction="ifRoom|collapseActionView" />
 
