--- a/app/src/main/res/drawable/login_background.xml
+++ b/app/src/main/res/drawable/login_background.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <gradient
-        android:type="linear"
-        android:angle="100"
-        android:startColor="#EF8CD1"
-        android:endColor="#7B8EE4"
-        />
+<!--    <gradient-->
+<!--        android:type="linear"-->
+<!--        android:angle="100"-->
+<!--        android:startColor="#EF8CD1"-->
+<!--        android:endColor="#7B8EE4"-->
+<!--        />-->
+
+
 
 </shape>
