--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,19 +29,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:paddingStart="15dp"
         android:text="Welcome to Viamm,"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:ignore="MissingConstraints" />
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="610dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
-        tools:layout_editor_absoluteX="-2dp">
+        app:layout_constraintTop_toBottomOf="@+id/tvWelcome">
 
         <Button
             android:id="@+id/btn_order"
@@ -77,7 +78,7 @@
             android:background="@color/Analytics"
             android:padding="30dp"
             android:text="Analytics"
-            android:textSize="50sp"
+            android:textSize="45sp"
             android:textStyle="bold" />
 
     </RelativeLayout>
