--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="lavender">#8080DC</color>
     <color name="grey">#A6A6A6</color>
 
+<!-- App Background Color-->
+    <color name="app_color">#8ecfe6</color>
+
 <!-- Toolbar colors -->
     <color name="toolbarColor">#7699d5</color>
     <color name="APpColor">#7f421f</color>
@@ -24,8 +27,12 @@
     <color name="AlertDialogText">#FFFFFFFF</color>
 
 <!-- Menu Button Colors -->
-    <color name="Bookings">#69BFFF</color>
-    <color name="Records">#80CBC4</color>
-    <color name="Analytics">#B39DDB</color>
+<!--    <color name="Bookings">#69BFFF</color>-->
+<!--    <color name="Records">#80CBC4</color>-->
+<!--    <color name="Analytics">#B39DDB</color>-->
+
+    <color name="Bookings">#FFD298</color>
+    <color name="Records">#96FF96</color>
+    <color name="Analytics">#9F9DF0</color>
 
 </resources>
