--- a/app/src/main/res/drawable/viamm_bg.xml
+++ b/app/src/main/res/drawable/viamm_bg.xml
@@ -1,3 +1,3 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/app_color" />
+    <solid android:color="@color/app_bg_color" />
 </shape>
