--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,16 +4,17 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF4B4B</color>
-    <color name="green">#96FF96</color>
+    <color name="green">#69FF69</color>
     <color name="bluegreen">#78F6F6</color>
     <color name="lavender">#8080DC</color>
     <color name="grey">#A6A6A6</color>
 
 <!-- App Background Color-->
-    <color name="app_color">#8ecfe6</color>
+    <color name="app_bg_color">#8ecfe6</color>
+    <color name="toolbarColor">#7699d5</color>
+    <color name="app_back">#7699d5</color>
 
 <!-- Toolbar colors -->
-    <color name="toolbarColor">#7699d5</color>
     <color name="APpColor">#7f421f</color>
     <color name="StatusBarColor">#dccdb8</color>
 
